<resources>
    <string name="app_name">Crime Reporting App</string>
    <string name="pass_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="login">login</string>
    <string name="LogIn">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="create_account">Need an account? Sign up!</string>
    <string name="welcome_msg">Welcome to Crime Reporting App</string>
    <string name="welcome_msg2">ADMIN LOGIN PANEL</string>
    <string name="account_setting">Account Settings</string>
    <string name="action_settings">Settings</string>
    <string name="action_Logout">Log Out</string>
    <string name="regstring">Register</string>
    <string name="access_token">sk.eyJ1IjoibWFoaXIxMDEiLCJhIjoiY2s0Y28wNHZjMGxoZTNrcGI0NW92czc0OCJ9.gqmIPzYPe4-V6wEAr2Hw-g</string>
    <string name="country_prompt">Choose the Crime occured!</string>
    <string name="register">register</string>
    <string name="already_have_account">already have an account</string>
    <string name="logout">Logout\n</string>
    <string name="view_reports">View Report</string>
    <string name="report_crime">Report Crime</string>
    <string name="welcome">Welcome</string>
    <string name="crime_description_hint">crime description</string>
    <string name="report">report</string>
    <string name="image_description">Image Description</string>
    <string name="main_menu">main menu</string>
    <string name="image_desc">image description\n</string>
    <string name="profile_image">Profile Image</string>
    <string name="name">Name: </string>
    <string name="age">Age: </string>
    <string name="dress_color">Dress Color: </string>
    <string name="city">City: </string>
    <string name="gender">Gender: </string>
    <string name="description">Description: </string>
    <string name="address">Address: </string>


</resources>
