<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@drawable/bg">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="210dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        app:srcCompat="@drawable/logoc" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:layout_below="@id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp" />

    <EditText
        android:id="@+id/registerEmail"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_below="@id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/editround"
        android:drawableLeft="@drawable/user"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:paddingLeft="10dp" />

    <EditText
        android:id="@+id/registerPassword"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_below="@id/registerEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/editround"
        android:drawableLeft="@drawable/password"
        android:ems="10"
        android:hint="@string/pass_hint"
        android:inputType="textPassword"
        android:paddingLeft="10dp" />

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="260dp"
        android:layout_height="48dp"
        android:layout_below="@id/registerPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/btrounded"
        android:text="@string/register"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/registerLoginBtn"
        android:layout_width="260dp"
        android:layout_height="48dp"
        android:layout_below="@id/registerBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/btrround"
        android:text="@string/already_have_account"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

    <ProgressBar
        android:id="@+id/registerProgress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="invisible"
        android:layout_below="@id/registerLoginBtn"
        android:layout_marginTop="10dp" />

</RelativeLayout>
